--- a/data/talks.yaml
+++ b/data/talks.yaml
@@ -1,48 +1,53 @@
-- date: 2016-11-06
-  author:  Simon Charlow
-  title: Scalar implicature and exceptional scope
-  abstract: |
-    There is lots of work on scalar implicature, lots of work on the
-    exceptional scope properties of indefinites, and comparatively little work
-    on the scalar implicatures of exceptionally scoping indefinites. This note
-    points out that a phenomenon of 'exceptional scalar distributivity'
-    suggests that the scalar alternatives of indefinites are more abstract
-    than we might have figured: they don't correspond to any actually
-    expressible lexemes, and they aren't, strictly speaking, alternatives of
-    the indefinite determiner at all! I develop a rudimentary account,
-    pointing out various issues, predictions, and choice points along the way.
-    I show that two different kinds of theories can be used to explain the
-    data: one uses choice functions for exceptional scope, and another uses
-    alternatives directly.
-  location: Submitted
-  url: http://ling.auf.net/lingbuzz/003181
-
-- date: 2016-11-06
-  author:  Simon Charlow
-  title: Where is the destructive update problem?
-  url: http://semanticsarchive.net/Archive/jJhMWNlZ/
-  abstract: |
-    Though much research assumes or argues that there’s a ‘destructive update’
-    problem for dynamic accounts of anaphora, it isn’t easy to see what this
-    problem is supposed to consist in. There do not, in particular, seem to be
-    any problematic empirical predictions associated with destructive update.
-    In a sense, this is unsurprising: destructive update of assignments is a
-    characteristic feature of how binding is perpetrated in static systems
-    (including first-order logic and the λ-calculus). The difference between
-    static and dynamic systems isn’t that only dynamic systems allow
-    destructive update — it’s that only dynamic systems treat assignment
-    functions as bona fide semantic values, as information.
-  location: Forthcoming in <em>Semantics & Pragmatics</em>
-
-- date: 2014-08-01
+- date: 2016-11-04
   author: Simon Charlow
-  title: On the semantics of exceptional scope
-  url: http://semanticsarchive.net/Archive/2JmMWRjY/
-  location: "My NYU Ph.D. thesis (Chair: Chris Barker)"
-  abstract: |
-    I motivate a new theory of exceptional scope phenomena in natural
-    language—that is, the ability of some expressions to affect the
-    interpretation of others from inside scope islands. I propose that a scope
-    island is any domain that is obligatorily evaluated and that exceptional
-    scope uniformly reflects linguistic side effects taking scope after the
-    evaluation of a scope island.
+  title: Alternatives, and alternative semantics
+  url: handouts/nyu-alts-2016.pdf
+  location: <a href="http://nyusemantics.github.io">NYU Semantics Group</a>
+
+- date: 2016-07-10
+  author: Simon Charlow, Dylan Bumford
+  title: "Monadic dynamic semantics: Side effects and scope"
+  url: handouts/MNLS.pdf
+  location: <a href="http://www.indiana.edu/~iulg/nlcs.html">NLCS \'16</a>
+
+- date: 2015-11-20
+  author: Simon Charlow
+  title: The grammar of exceptional scope
+  url: handouts/umd-slides-2015.pdf
+  location: University of Maryland Linguistics Colloquium
+
+- date: 2015-11-05
+  author: Simon Charlow
+  title: The grammar of exceptional scope
+  url: handouts/cornell-slides-2015.pdf
+  location: Cornell Linguistics Colloquium
+
+- date: 2015-10-24
+  author: Simon Charlow
+  title: Monadic dynamic semantics for anaphora
+  url: handouts/monads-slides-cmh.pdf
+  location: <a href="http://www.u.tsukuba.ac.jp/~kubota.yusuke.fn/DynamicSemanticsWS.html">Ohio State Dynamic Semanics Workshop</a>
+
+- date: 2015-10-13
+  author: Simon Charlow
+  title: Compositional licensing of silent structure
+  url: handouts/CLSS-CUNY.pdf
+  location: CUNY Syntax Supper
+
+- date: 2015-05-22
+  author: Simon Charlow
+  title: Conventional implicature as a scope phenomenon
+  url: handouts/CISP-slides.pdf
+  location: NYU Workshop on Continuations and Scope
+
+- date: 2015-05-15
+  author: Simon Charlow
+  title: The scope of alternatives
+  url: handouts/SALT25__slides.pdf
+  location: <a href="https://web.stanford.edu/dept/linguistics/events/salt25/">SALT 25 (Stanford)</a>
+
+- date: 2015-05-03
+  author: Simon Charlow
+  title: The scope of alternatives
+  url: handouts/uconn-2015.pdf
+  location: <a href="http://logic.uconn.edu/workshop/">Going Heim (UConn)</a>
