fix typo: papers.yaml

--- a/data/talks.yaml
+++ b/data/talks.yaml
@@ -26,7 +26,7 @@
   author: Simon Charlow
   title: Monadic dynamic semantics for anaphora
   url: handouts/monads-slides-cmh.pdf
-  location: <a href="http://www.u.tsukuba.ac.jp/~kubota.yusuke.fn/DynamicSemanticsWS.html">Ohio State Dynamic Semanics Workshop</a>
+  location: <a href="http://www.u.tsukuba.ac.jp/~kubota.yusuke.fn/DynamicSemanticsWS.html">Ohio State Dynamic Semantics Workshop</a>
 
 - date: 2015-10-13
   author: Simon Charlow
