--- a/data/talks.yaml
+++ b/data/talks.yaml
@@ -44,8 +44,7 @@
   author: Simon Charlow
   title: The scope of alternatives
   url: handouts/SALT25__slides.pdf
-  location: |
-    Refereed talk @ <a href="https://web.stanford.edu/dept/linguistics/events/salt25/">SALT 25 (Stanford)</a>
+  location: Refereed talk @ <a href="https://web.stanford.edu/dept/linguistics/events/salt25/">SALT 25 (Stanford)</a>
 
 - date: 2015-05-03
   author: Simon Charlow
