--- a/data/papers.yaml
+++ b/data/papers.yaml
@@ -1,6 +1,6 @@
 - date: 2016-11-19
   title: Post-suppositions and semantic theory
-  location: Manuscript coming soon
+  location: Submitted to <em>Journal of Semantics</em>
   abstract: |
     I explore two alternatives to post-suppositions for generating cumulative
     readings of sentences with multiple modified numerals. The first uses
@@ -30,7 +30,7 @@
     modified numerals; (iii) the reasons for this turn out to be specific to
     modified numerals; other post-suppositional analyses are better
     reformulated with higher-order GQs.
-  url: \#
+  url: papers/PSST.pdf
 
 - date: 2016-11-19
   title: "The scope of alternatives: Indefiniteness and islands"
@@ -93,7 +93,7 @@
     I show that two different kinds of theories can be used to explain the
     data: one uses choice functions for exceptional scope, and another uses
     alternatives directly.
-  location: Submitted to <em>Linguistic Inquiry</em>
+  location: Under revision for <em>Linguistic Inquiry</em>
   url: http://ling.auf.net/lingbuzz/003181
 
 - date: 2016-09-04
