update psst url

--- a/data/papers.yaml
+++ b/data/papers.yaml
@@ -30,7 +30,7 @@
     modified numerals; (iii) the reasons for this turn out to be specific to
     modified numerals; other post-suppositional analyses are better
     reformulated with higher-order GQs.
-  url: papers/PSST.pdf
+  url: http://ling.auf.net/lingbuzz/003243 
 
 - date: 2016-11-19
   title: "The scope of alternatives: Indefiniteness and islands"
