--- a/data/papers.yaml
+++ b/data/papers.yaml
@@ -1,3 +1,31 @@
+- date: 2017-02-01
+  title: "The scope of alternatives: Indefiniteness and islands"
+  location: Submitted to <em>Linguistics & Philosophy</em>
+  abstract: |
+    I argue that expressions that denote sets of alternatives interact with
+    their semantic contexts by taking scope. My account relies only on two
+    freely-applying type-shifters: the first is Karttunen’s (1977)
+    proto-question operator, aka Partee’s (1986) IDENT, and the second can be
+    factored out of extant approaches to the semantics of questions in the
+    tradition of Karttunen (1977). These type-shifters form a decomposition
+    of LIFT, the familiar function mapping values into scope-takers.
+    Exceptional scope of alternative-generating expressions arises via
+    (snowballing) scopal pied-piping. With an empirical focus on English
+    indefinites, I argue that this approach to alternatives improves on
+    standard alternative-semantic architectures that use point-wise
+    composition to subvert islands (and, more generally, on in situ approaches
+    to indefinites). Specifically, unlike grammars based on point-wise
+    composition, scope-based alternative management is thoroughly
+    categorematic, does not under-generate readings when multiple indefinites
+    occur on an island, and is readily compatible with standard treatments of
+    binding. I explore two generalizations of the basic theory: one is
+    oriented around assignment-relative sets of alternatives, and the other
+    incorporates a dynamic perspective on assignment functions. The upshot is
+    that dynamic semantics can be seen as a strict extension of alternative
+    semantics, with the initial results (including island insensitivity for
+    alternative generators) preserved.
+  url: http://ling.auf.net/lingbuzz/003302
+
 - date: 2016-11-19
   title: Post-suppositions and semantic theory
   location: Submitted to <em>Journal of Semantics</em>
@@ -31,32 +59,6 @@
     modified numerals; other post-suppositional analyses are better
     reformulated with higher-order GQs.
   url: http://ling.auf.net/lingbuzz/003243
-
-- date: 2016-01-01
-  title: "The scope of alternatives: Indefiniteness and islands"
-  location: Manuscript coming soon
-  abstract: |
-    I show how alternatives can interact with their semantic context by taking
-    scope. My account relies only on two freely-applying type-shifters: the
-    first is Karttunen’s (1977) proto-question operator, aka Partee’s (1986)
-    IDENT, and the second can be factored out of extant approaches to the
-    semantics of questions in the tradition of Karttunen (1977) (following
-    suggestive remarks in Cresti 1995). These type-shifters form a
-    decomposition of LIFT, the familiar mapping from values into scope-takers.
-    Exceptional scope of alternative-generating expressions then arises
-    immediately via an analog of LF pied-piping. I give arguments for this
-    view and against more standard architectures that integrate alternatives
-    via pointwise composition. Unlike these approaches, scope-based
-    alternative management is thoroughly categorematic, fully compatible with
-    standard treatments of variable binding, and does not under-generate
-    readings in configurations with multiple sources of alternatives. I
-    explore two elaborations of the basic theory: one incorporates direct
-    reference to assignment functions, and the other does the same, but with
-    an eye towards dynamic notions of meaning. The upshot is that dynamic
-    semantics can be seen as a strict extension of alternative semantics, with
-    the initial results (including island insensitivity for alternative
-    generators) preserved.
-  url: \#
 
 - date: 2016-01-01
   title: "Debugging choice functions"
