--- a/data/papers.yaml
+++ b/data/papers.yaml
@@ -28,7 +28,7 @@
 
 - date: 2016-11-19
   title: Post-suppositions and semantic theory
-  location: Submitted to <em>Journal of Semantics</em>
+  location: Accepted pending minor revisions at <em>Journal of Semantics</em>
   abstract: |
     I explore two alternatives to post-suppositions for generating cumulative
     readings of sentences with multiple modified numerals. The first uses
@@ -111,8 +111,7 @@
     static and dynamic systems isn’t that only dynamic systems allow
     destructive update — it’s that only dynamic systems treat assignment
     functions as bona fide semantic values, as information.
-  location: Forthcoming in <em>Semantics & Pragmatics</em>
-    (pending minor revisions)
+  location: Accepted pending minor revisions at <em>Semantics & Pragmatics</em>
   url: http://semanticsarchive.net/Archive/jJhMWNlZ/
 
 - date: 2015-07-08
