--- a/data/papers.yaml
+++ b/data/papers.yaml
@@ -1,6 +1,6 @@
 - date: 2017-02-01
   title: "The scope of alternatives: Indefiniteness and islands"
-  location: Submitted to <em>Linguistics & Philosophy</em>
+  location: Accepted at <em>Linguistics & Philosophy</em>
   abstract: |
     I argue that expressions that denote sets of alternatives interact with
     their semantic contexts by taking scope. My account relies only on two
