--- a/data/papers.yaml
+++ b/data/papers.yaml
@@ -2,7 +2,7 @@
   title: A modular theory of pronouns and binding
   location: Submitted to <em>Proceedings of <a href="www.is.ocha.ac.jp/~bekki/lenls/">LENLS 14</a></em>
   abstract: |
-    Since Shan's (2002) pioneering work, a number of researchers have argued
+    <p>Since Shan's (2002) pioneering work, a number of researchers have argued
     that <em>monads</em> offer a flexible, robust compositional interface for
     expressions that denote in "enriched spaces". This paper argues that a
     monadic treatment of pronouns and assignment-sensitivity has a number of
@@ -14,14 +14,14 @@
     standard treatments of assignment-friendly composition --- yielding a
     so-called <em>applicative functor</em> --- and then adding a third
     function to deal with 'higher-order' variables, yielding a
-    monad.<br><br>Two developments of the basic idea are briefly explored.
+    monad.</p><p>Two developments of the basic idea are briefly explored.
     First, I argue that a mere applicative functor turns out to be sufficient
     after all, if we (a) adopt a more type-theoretically conservative
     treatment of assignments than is standard, and (b) countenance sentence
     meanings that depend on multiple assignments. Second, I demonstrate an
     equivalence of the resulting theory with a <em>variable-free
     semantics</em>, one which extends both to the combinatory apparatus
-    underwriting composition, and to the resulting semantic values.
+    underwriting composition, and to the resulting semantic values.</p>
   url: http://ling.auf.net/lingbuzz/003720
 
 - date: 2017-09-01
