fix LENLS external link

--- a/data/papers.yaml
+++ b/data/papers.yaml
@@ -1,6 +1,6 @@
 - date: 2017-10-22
   title: A modular theory of pronouns and binding
-  location: Submitted to <em>Proceedings of <a href="www.is.ocha.ac.jp/~bekki/lenls/">LENLS 14</a></em>
+  location: Submitted to <em>Proceedings of <a href="http://www.is.ocha.ac.jp/~bekki/lenls/">LENLS 14</a></em>
   abstract: |
     <p>Since Shan's (2002) pioneering work, a number of researchers have argued
     that <em>monads</em> offer a flexible, robust compositional interface for
