--- a/data/talks.yaml
+++ b/data/talks.yaml
@@ -1,7 +1,7 @@
 - date: 2017-10-25
   title: Modular alternative semantics
   url: handouts/umass-2017.pdf
-  location: UMass Amherst Semantics Group
+  location: UMass Amherst Semantics Workshop
 
 - date: 2017-10-14
   title: A modular theory of pronouns (and binding)
