--- a/data/talks.yaml
+++ b/data/talks.yaml
@@ -6,7 +6,7 @@
 - date: 2017-10-14
   title: A modular theory of pronouns (and binding)
   url: handouts/phlip-slides.pdf
-  location: <a href="https://lucian.uchicago.edu/blogs/phlip/program/">Philosophical Linguistics & Linguistical Philosophy</a> (PhLiP, Tarrytown)
+  location: <a href="https://lucian.uchicago.edu/blogs/phlip/program/">Philosophical Linguistics & Linguistical Philosophy</a> (PhLiP, Tarrytown). <a href="http://www.is.ocha.ac.jp/~bekki/lenls/">LENLS14</a> version <a href="handouts/lenls-slides-2017.pdf">here</a>
 
 - date: 2017-09-05
   title: Parsing with Dynamic Continuized CCG
