--- a/data/papers.yaml
+++ b/data/papers.yaml
@@ -161,7 +161,7 @@
     destructive update — it's that only dynamic systems treat assignment
     functions as bona fide semantic values, as information.
   location: Accepted with revisions at <em>Semantics & Pragmatics</em>
-  url: https://simoncharlow.com/papers/DESTRUCT.pdf/
+  url: https://simoncharlow.com/papers/DESTRUCT.pdf
 
 - date: 2015-07-08
   title: Givenness, compositionally and dynamically
