--- a/data/papers.yaml
+++ b/data/papers.yaml
@@ -47,9 +47,9 @@
     attractive computational properties.
   url: http://aclweb.org/anthology/W17-6208
 
-- date: 2017-02-01
+- date: 2018-05-01
   title: "The scope of alternatives: Indefiniteness and islands"
-  location: Accepted at <em>Linguistics & Philosophy</em>
+  location: To appear in <em>Linguistics & Philosophy</em>
   abstract: |
     I argue that expressions that denote sets of alternatives interact with
     their semantic contexts by taking scope. My account relies only on two
@@ -75,7 +75,7 @@
     alternative generators) preserved.
   url: http://ling.auf.net/lingbuzz/003302
 
-- date: 2016-11-19
+- date: 2018-01-01
   title: Post-suppositions and semantic theory
   location: Accepted pending minor revisions at <em>Journal of Semantics</em>
   abstract: |
@@ -147,7 +147,7 @@
   location: Under revision for <em>Linguistic Inquiry</em>
   url: http://ling.auf.net/lingbuzz/003181
 
-- date: 2016-09-04
+- date: 2019-01-01
   title: Where is the destructive update problem?
   abstract: |
     Though much research assumes or argues that there's a ‘destructive update'
